[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/guncolect.png" type="Texture" id=1]
[ext_resource path="res://Assets/lasercolect.png" type="Texture" id=2]
[ext_resource path="res://Game/LaserCollectable.gd" type="Script" id=3]
[ext_resource path="res://Assets/lifecol.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.1508, 24.8383 )

[node name="GeneralCollectable" type="Area2D"]
script = ExtResource( 3 )

[node name="GunCol" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="LasCol" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeCol" type="Sprite" parent="."]
visible = false
position = Vector2( 0.749519, 1.6837 )
scale = Vector2( 0.433796, 0.431286 )
texture = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_GeneralCollectable_body_entered"]
